2.6.3
- Bugfixes
  - Prevent buffer overflow if digest realm too long

2.6.2
- Features
  - Install winrs.rb (Windows Remote Shell) to /usr/bin
  - New package: winrs
- Bugfixes
  - Make iniparser thread-safe (Emil Bartczak)
  - Fix excessive RPM rebuilds (Olaf Hering)
  - Fix selector extraction from URI query (Markus Kolb)
  - Fix RPM building on older distributions
  - Fix RPM building on Fedora 22

2.6.1
- Features
  - Add curlopt_nosignal option to openwsman_client.conf to prevent
    CURL crashes in multithreaded client applications
  - Limit EnvelopeSize to 32767 if wsman:MaxEnvelopeSize not set in
    request (WS-Man 1.2 compatibility) (Prabhakar Pujeri)
- Bugfixes
  - fix memory leaks (Vitezslav Crhonek)
  - honor client:agent from openwsman_client.conf
  - fix possible crash in dictionary_get()

2.6.0
- Features
  - Implement DSP 0226 Section 6.3 wsman:Locale
    (wsmc_set_locale, wsmc_get_locale)
  - set transport timeout for c++ binding (prabhakar_pujeri@dell.com)
  - print CIMError code in HTTP header (prabhakar_pujeri@dell.com)

2.5.2
- Features
  - build native Python package (Ahmad Jagot)
- Cleanup
  - remove (unused) 'min_threads' config option (Vitezslav Crhonek)

2.5.1
- Features
  - Allow ';' as separator for URI selectors
    (RFC 1866 section 8.2.1)
  - Warn if ',' is used as selector separator

2.5.0
- Features
  - Rewrite selector and property handling to keep
    them in order (#49)
    Selectors and properties can now handle EndpointReferences
    as values. This increases compatibility with Intel AMT 7.0
    and later.
  - ABI change, .so version 3
  - Ruby: Add EndPointReference#to_s

2.4.15
- Features
  - Ruby: Add Fault#to_s
  - Ruby: Enable ClientOptions#properties=
  - Cim: New config option "cim_client_cql' to select CQL query
    identifier ('CQL' - default, 'DMTF:CQL' - standards-compliant)
- Bugfixes
  - Fix segfault in wsmc_add_property
  - Fix memleak in xpath handling