@@ -2028,8 +2028,11 @@ wsmc_create(const char *hostname,
 #ifdef _WIN32
 	wsc->session_handle = 0;
 #endif
-	wsc->data.endpoint = u_strdup_printf("%s://%s:%d%s",
-			wsc->data.scheme, wsc->data.hostname, wsc->data.port, wsc->data.path);
+	wsc->data.endpoint = u_strdup_printf("%s://%s:%d%s%s",
+                                             wsc->data.scheme, wsc->data.hostname,
+                                             wsc->data.port,
+                                             (*wsc->data.path == '/') ? "" : "/",
+                                             wsc->data.path);
 	debug("Endpoint: %s", wsc->data.endpoint);
 	wsc->authentication.verify_host = 1; //verify CN in server certicates by default
 	wsc->authentication.verify_peer = 1; //validate server certificates by default
