@@ -1,6 +1,7 @@
 2.6.3
 - Bugfixes
   - Prevent buffer overflow if digest realm too long
+  - Ensure path starts with '/' in client data endpoint
 
 2.6.2
 - Features
